--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -19,7 +19,8 @@
     "# Import your libraries:\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sklearn"
    ]
   },
   {
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,22 +320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5122262147793499"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5122262147793499\n",
+      "[ 3.03499549e-01 -2.37639315e+02  5.10530605e+02  3.27736980e+02\n",
+      " -8.14131709e+02  4.92814588e+02  1.02848452e+02  1.84606489e+02\n",
+      "  7.43519617e+02  7.60951722e+01]\n",
+      "152.76430691633442\n"
+     ]
     }
    ],
    "source": [
-    "diabetes_model.score(diabetes_data_train, diabetes_target_train)"
+    "diabetes_model = linear_model.LinearRegression().fit(diabetes_data_train, diabetes_target_train)\n",
+    "\n",
+    "print(diabetes_model.score(diabetes_data_train, diabetes_target_train))\n",
+    "print(diabetes_model.coef_)\n",
+    "print(diabetes_model.intercept_ )"
    ]
   },
   {
@@ -386,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +604,7 @@
        "19                      52.603357        57.0         -4.396643"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +678,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.500\n",
       "Method:                 Least Squares   F-statistic:                     43.16\n",
       "Date:                Wed, 06 Mar 2019   Prob (F-statistic):           4.64e-58\n",
-      "Time:                        17:49:40   Log-Likelihood:                -2281.1\n",
+      "Time:                        20:35:55   Log-Likelihood:                -2281.1\n",
       "No. Observations:                 422   AIC:                             4584.\n",
       "Df Residuals:                     411   BIC:                             4629.\n",
       "Df Model:                          10                                         \n",
@@ -730,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +744,12 @@
     "\n",
     "# El F-score es 43.16, pero nos interesa mirar la probabilidad de F-score, que es muy pequeña (4.64e-58). Como es menor de 0.05, concluimos que al menos uno de los coeficientes o features es significante (rechazamos su null)\n",
     "# por otro lado, podemos ver el p-value de cada uno de los coeficientes. Si son menores de 0.05, rechazamos la null, que quiere decir que el coeficiente es significante y discriminatorio en el experimento.\n",
-    "# También podemos fijarnos en el intervalo de confianza, y si este contiene el 0, NO rechazamos la null, porque la feature en ese caso no es discriminatoria al poder adpotar el valor 0."
+    "# También podemos fijarnos en el intervalo de confianza, y si este contiene el 0, NO rechazamos la null, porque la feature en ese caso no es discriminatoria al poder adpotar el valor 0 al multiplicarse por él.\n",
+    "\n",
+    "# En este experimento, sacamos las siguientes conclusiones:\n",
+    "# - at least one of the coefficients is significantly different from zero, porque la probabilidad del F-score es menor que 0.05\n",
+    "# - coeficientes que son significantes: x2, x3, x4 y x9 (x5 está en el limbo)\n",
+    "# - el resto de coeff no son significantes y si modificamos la regresión lineal, los quitaríamos"
    ]
   },
   {
@@ -763,7 +774,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "auto = pd.read_csv('../auto-mpg.csv')"
    ]
   },
   {
@@ -777,9 +790,123 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horse_power</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>car_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"chevrolet chevelle malibu\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"buick skylark 320\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"plymouth satellite\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"amc rebel sst\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>\\t\"ford torino\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement  horse_power  weight  acceleration  \\\n",
+       "0  18.0          8         307.0        130.0    3504          12.0   \n",
+       "1  15.0          8         350.0        165.0    3693          11.5   \n",
+       "2  18.0          8         318.0        150.0    3436          11.0   \n",
+       "3  16.0          8         304.0        150.0    3433          12.0   \n",
+       "4  17.0          8         302.0        140.0    3449          10.5   \n",
+       "\n",
+       "   model_year                       car_name  \n",
+       "0          70  \\t\"chevrolet chevelle malibu\"  \n",
+       "1          70          \\t\"buick skylark 320\"  \n",
+       "2          70         \\t\"plymouth satellite\"  \n",
+       "3          70              \\t\"amc rebel sst\"  \n",
+       "4          70                \\t\"ford torino\"  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "auto.head()"
    ]
   },
   {
@@ -793,9 +920,31 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg             float64\n",
+       "cylinders         int64\n",
+       "displacement    float64\n",
+       "horse_power     float64\n",
+       "weight            int64\n",
+       "acceleration    float64\n",
+       "model_year        int64\n",
+       "car_name         object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "auto.dtypes\n",
+    "#car name es un string y no ha sido misclassified"
    ]
   },
   {
@@ -809,9 +958,24 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70\n",
+      "82\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "print(min(auto.model_year))\n",
+    "print(max(auto.model_year))\n",
+    "\n",
+    "# the newest = 82\n",
+    "# the oldest = 70"
    ]
   },
   {
@@ -825,9 +989,32 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg             0\n",
+       "cylinders       0\n",
+       "displacement    0\n",
+       "horse_power     0\n",
+       "weight          0\n",
+       "acceleration    0\n",
+       "model_year      0\n",
+       "car_name        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "auto.dropna(inplace = True)\n",
+    "\n",
+    "auto.isnull().sum()"
    ]
   },
   {
@@ -841,9 +1028,26 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    199\n",
+       "8    103\n",
+       "6     83\n",
+       "3      4\n",
+       "5      3\n",
+       "Name: cylinders, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "display(auto['cylinders'].value_counts())"
    ]
   },
   {
@@ -863,7 +1067,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    " \n",
+    "auto.drop(['car_name'], axis = 1, inplace = True)\n",
+    "\n",
+    "X = auto[['cylinders', 'displacement', 'horse_power', 'weight',\n",
+    "       'acceleration', 'model_year']]\n",
+    "\n",
+    "y = auto['mpg']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20) # random_state?\n"
    ]
   },
   {
@@ -879,9 +1094,25 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8204786216292087\n",
+      "[-0.39733479  0.00702558 -0.00618162 -0.00651138  0.01269298  0.74089399]\n",
+      "-12.273325372111618\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "auto_model = linear_model.LinearRegression().fit(X_train, y_train)\n",
+    "\n",
+    "print(auto_model.score(X_train, y_train)) # score de 80%, es alto!\n",
+    "print(auto_model.coef_)\n",
+    "print(auto_model.intercept_ )"
    ]
   },
   {
@@ -912,9 +1143,29 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8204786216292087"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "y_pred = auto_model.predict(X_train)\n",
+    "\n",
+    "SSE_training = r2_score(y_train, y_pred)\n",
+    "\n",
+    "SSE_training # Un 80% de sum squared errors es demasiado error, we want the SSE value to be as small as possible. \n",
+    "# The estimated regression model doesn't fit the training data"
    ]
   },
   {
@@ -932,9 +1183,26 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7703147018851655"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "y_test_pred = auto_model.predict(X_test)\n",
+    "\n",
+    "SSE_test = r2_score(y_test, y_test_pred)\n",
+    "\n",
+    "SSE_test # Como el R2 de train y de test son muy parecidos, nuestro modelo no está overfitted. Aun así, hay mucho error"
    ]
   },
   {
@@ -963,7 +1231,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "X_train09, X_test09, y_train09, y_test09 = train_test_split(X, y, test_size=0.10) # random_state?"
    ]
   },
   {
@@ -977,9 +1247,25 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8114500139918372\n",
+      "[-0.39733479  0.00702558 -0.00618162 -0.00651138  0.01269298  0.74089399]\n",
+      "-12.273325372111618\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "auto_model09 = linear_model.LinearRegression().fit(X_train09, y_train09)\n",
+    "\n",
+    "print(auto_model.score(X_train09, y_train09)) # score de 80%, es alto!\n",
+    "print(auto_model.coef_)\n",
+    "print(auto_model.intercept_ )"
    ]
   },
   {
@@ -993,9 +1279,26 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8122695596962157"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "y_pred09 = auto_model09.predict(X_train09)\n",
+    "\n",
+    "SSE_training09 = r2_score(y_train09, y_pred09)\n",
+    "\n",
+    "SSE_training09"
    ]
   },
   {
@@ -1007,11 +1310,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7634083628209587"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "y_test_pred09 = auto_model09.predict(X_test09)\n",
+    "\n",
+    "SSE_test09 = r2_score(y_test09, y_test_pred09)\n",
+    "\n",
+    "SSE_test09 # Como el R2 de train09 y de test09 son muy parecidos, nuestro modelo no está overfitted. \n",
+    "\n",
+    "# Sigue habiendo bastante error!! No ha mejorado mucho"
    ]
   },
   {
@@ -1027,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
