Terminado con Bonus

--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -1110,7 +1110,7 @@
     "\n",
     "auto_model = linear_model.LinearRegression().fit(X_train, y_train)\n",
     "\n",
-    "print(auto_model.score(X_train, y_train)) # score de 80%, es alto!\n",
+    "print(auto_model.score(X_train, y_train)) # score de 82%, es alto!\n",
     "print(auto_model.coef_)\n",
     "print(auto_model.intercept_ )"
    ]
@@ -1270,7 +1270,7 @@
     "\n",
     "auto_model09 = linear_model.LinearRegression().fit(X_train09, y_train09)\n",
     "\n",
-    "print(auto_model.score(X_train09, y_train09)) # score de 80%, es alto!\n",
+    "print(auto_model.score(X_train09, y_train09)) # score de 81%, es alto!\n",
     "print(auto_model.coef_)\n",
     "print(auto_model.intercept_ )"
    ]
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1293,7 @@
        "0.8122695596962157"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,9 +1303,9 @@
     "\n",
     "y_pred09 = auto_model09.predict(X_train09)\n",
     "\n",
-    "SSE_training09 = r2_score(y_train09, y_pred09)\n",
+    "SSE_train09 = r2_score(y_train09, y_pred09)\n",
     "\n",
-    "SSE_training09"
+    "SSE_train09"
    ]
   },
   {
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "0.7634083628209587"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bonus Challenge 2 - Backward Elimination \n",
+    "## Bonus Challenge 2 - Backward Elimination \n",
     "\n",
     "The main way to produce a simpler linear regression model is to reduce the number of variables used in the model. In scikit-learn, we can do this by using recursive feature elimination. You can read more about RFE [here](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.RFE.html).\n",
     "\n",
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,12 +1379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "simpler_auto_model = RFE(auto_model, n_features_to_select = 3, step = 1)"
    ]
   },
   {
@@ -1396,11 +1397,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4, 3, 1, 1])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "simpler_auto_model = simpler_auto_model.fit(X, y)\n",
+    "\n",
+    "simpler_auto_model.ranking_ # mpg es la variable que queremos predecir por eso no sale su ranking"
    ]
   },
   {
@@ -1414,11 +1430,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['mpg', 'cylinders', 'displacement', 'horse_power', 'weight',\n",
+       "       'acceleration', 'model_year'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "\n",
+    "auto.columns # las columnas importantes son la primera, y las dos últimas: cylinders, acceleration y model_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "X_reduced = auto[['cylinders','acceleration', 'model_year']]\n",
+    "\n",
+    "X_train_reduced, X_test_reduced, y_train_reduced, y_test_reduced = train_test_split(X_reduced, y, test_size=0.20)"
    ]
   },
   {
@@ -1430,11 +1472,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.724016329922534\n",
+      "[-3.03659869 -0.05280816  0.73364825]\n",
+      "-14.866282434010067\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here: \n",
+    "\n",
+    "auto_model_reduced = linear_model.LinearRegression().fit(X_train_reduced, y_train_reduced)\n",
+    "\n",
+    "print(auto_model_reduced.score(X_train_reduced, y_train_reduced))\n",
+    "print(auto_model_reduced.coef_)\n",
+    "print(auto_model_reduced.intercept_ )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.724016329922534"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_reduced = auto_model_reduced.predict(X_train_reduced)\n",
+    "\n",
+    "SSE_auto_model_reduced_train = r2_score(y_train_reduced, y_pred_reduced)\n",
+    "\n",
+    "SSE_auto_model_reduced_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6814567679286644"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test_pred_reduced = auto_model_reduced.predict(X_test_reduced)\n",
+    "\n",
+    "SSE_auto_model_reduced_test = r2_score(y_test_reduced, y_test_pred_reduced)\n",
+    "\n",
+    "SSE_auto_model_reduced_test \n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here: \n"
+    "# El primer score del primer auto_model era de 82%\n",
+    "# Cuando intentamos mejorar el fit del auto_model, increasing the train sample size a 90%, el score nos da 81%\n",
+    "# Cuando intentamos mejorar el fit del auto_model reduciendo el número de variables, el score nos da 72%\n",
+    "\n",
+    "# Podemos concluir que no ha mejorado el modelo cuando intentamos mejorar el fit? ya que el score ha decrecido en ambos casos\n"
    ]
   },
   {
