--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -1546,15 +1546,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# El primer score del primer auto_model era de 82%\n",
     "# Cuando intentamos mejorar el fit del auto_model, increasing the train sample size a 90%, el score nos da 81%\n",
-    "# Cuando intentamos mejorar el fit del auto_model reduciendo el número de variables, el score nos da 72%\n",
+    "# Cuando intentamos mejorar el fit del auto_model reduciendo el número de features, el score nos da 72%\n",
     "\n",
-    "# Podemos concluir que no ha mejorado el modelo cuando intentamos mejorar el fit? ya que el score ha decrecido en ambos casos\n"
+    "# Podemos concluir que no ha mejorado el modelo cuando intentamos mejorar el fit? ya que el score ha decrecido en ambos casos\n",
+    "\n",
+    "# No nos podemos fijar sólo en el score. Hemos 'perdido' un poco de score a cambio de hacer un modelo 'mejor':\n",
+    "# al tener menos dimensiones, menos overfitting!! Más generalista!! \n",
+    "# realmente, hemos reducido de 10 dimensiones a 3, si con 3 ya obtenemos un score bastante alto, está claro que el modelo es mejor"
    ]
   },
   {
