Roc curve multiclass

--- a/module-3/supervised-learning-project/your-code/supervised-learning-project_diamonds.ipynb
+++ b/module-3/supervised-learning-project/your-code/supervised-learning-project_diamonds.ipynb
@@ -3260,6 +3260,9 @@
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "\n",
+    "# NO PONDERADO\n",
+    "# Ratio correct vs incorrect predictions\n",
+    "\n",
     "accuracy_score = accuracy_score(actual_values, predictions)\n",
     "accuracy_score"
    ]
@@ -3282,6 +3285,9 @@
    ],
    "source": [
     "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "# PONDERADO ---> Más real\n",
+    "# Ratio correct vs incorrect predictions\n",
     "\n",
     "balanced_accuracy_score = balanced_accuracy_score(actual_values, predictions)\n",
     "balanced_accuracy_score"
@@ -3432,6 +3438,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Roc Curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3492,9 +3526,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Roc Curve"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
