--- a/module-3/lab-unsupervised-learning-evaluation/your-code/main.ipynb
+++ b/module-3/lab-unsupervised-learning-evaluation/your-code/main.ipynb
@@ -515,7 +515,7 @@
     "    ax[i].scatter(x_embedded[:, 0], x_embedded[:, 1], c=X['labels'])\n",
     "    ax[i].set_title(\"Perplexity = {}\".format(perp))\n",
     "    \n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
