--- a/final-project/Tableau Plot.ipynb
+++ b/final-project/Tableau Plot.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt = pd.read_csv('../globalterrorism.csv')"
+    "gt = pd.read_csv('CSVs/globalterrorism.csv')"
    ]
   },
   {
