--- a/final-project/data_cleaning.ipynb
+++ b/final-project/data_cleaning.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -250,13 +250,13 @@
        "[5 rows x 135 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gt = pd.read_csv('../globalterrorismdb_0718dist_c.csv') # 'CSVs/asfads.csv'\n",
+    "gt = pd.read_csv('CSVs/globalterrorismdb_0718dist_c.csv') \n",
     "gt.head()"
    ]
   },
@@ -730,7 +730,7 @@
    ],
    "source": [
     "# Importo de nuevo el CSV\n",
-    "gt = pd.read_csv('../gt_clean.csv')\n",
+    "gt = pd.read_csv('CSVs/gt_clean.csv')\n",
     "gt.head()"
    ]
   },
