--- a/final-project/descriptive_statistics.ipynb
+++ b/final-project/descriptive_statistics.ipynb
@@ -227,7 +227,7 @@
     }
    ],
    "source": [
-    "gt = pd.read_csv('../globalterrorism.csv')\n",
+    "gt = pd.read_csv('CSVs/globalterrorism.csv')\n",
     "display(gt.shape)\n",
     "gt.head()"
    ]
