--- a/final-project/NPL.ipynb
+++ b/final-project/NPL.ipynb
@@ -3838,6 +3838,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.000    142\n",
+       "0.253    104\n",
+       "0.262     99\n",
+       "0.170     90\n",
+       "0.164     82\n",
+       "0.158     81\n",
+       "0.244     78\n",
+       "0.281     77\n",
+       "0.183     75\n",
+       "0.239     75\n",
+       "0.231     74\n",
+       "0.190     72\n",
+       "0.148     71\n",
+       "0.198     71\n",
+       "0.228     70\n",
+       "0.207     69\n",
+       "0.236     69\n",
+       "0.144     65\n",
+       "0.227     65\n",
+       "0.215     64\n",
+       "0.271     63\n",
+       "0.176     63\n",
+       "0.135     61\n",
+       "0.245     61\n",
+       "0.224     59\n",
+       "0.283     59\n",
+       "0.132     59\n",
+       "0.295     59\n",
+       "0.221     58\n",
+       "0.128     57\n",
+       "        ... \n",
+       "0.032      1\n",
+       "0.630      1\n",
+       "0.534      1\n",
+       "0.594      1\n",
+       "0.044      1\n",
+       "0.503      1\n",
+       "0.517      1\n",
+       "0.030      1\n",
+       "0.041      1\n",
+       "0.537      1\n",
+       "0.529      1\n",
+       "0.490      1\n",
+       "0.489      1\n",
+       "0.508      1\n",
+       "0.463      1\n",
+       "0.565      1\n",
+       "0.488      1\n",
+       "0.505      1\n",
+       "0.460      1\n",
+       "0.573      1\n",
+       "0.053      1\n",
+       "0.470      1\n",
+       "0.072      1\n",
+       "0.550      1\n",
+       "0.047      1\n",
+       "0.057      1\n",
+       "0.527      1\n",
+       "0.090      1\n",
+       "0.498      1\n",
+       "0.553      1\n",
+       "Name: negative_sentiment, Length: 486, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gt_10000.negative_sentiment.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [],
