--- a/final-project/Tableau Plot.ipynb
+++ b/final-project/Tableau Plot.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt = pd.read_csv('CSVs/globalterrorism.csv')"
+    "gt = pd.read_csv('CSVs/globalterrorism_band_tableau.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
